markdown-pages/zh/tidb/release-6.2/information-schema/information-schema-tiflash-replica.md
---
title: TIFLASH_REPLICA
summary: 了解 information_schema 表 `TIFLASH_REPLICA`。
---

# TIFLASH_REPLICA

`TIFLASH_REPLICA` 表提供了有关可用的 TiFlash 副本的信息。


```sql
USE information_schema;
DESC tiflash_replica;
```

```sql
+-----------------+-------------+------+------+---------+-------+
| Field           | Type        | Null | Key  | Default | Extra |
+-----------------+-------------+------+------+---------+-------+
| TABLE_SCHEMA    | varchar(64) | YES  |      | NULL    |       |
| TABLE_NAME      | varchar(64) | YES  |      | NULL    |       |
| TABLE_ID        | bigint(21)  | YES  |      | NULL    |       |
| REPLICA_COUNT   | bigint(64)  | YES  |      | NULL    |       |
| LOCATION_LABELS | varchar(64) | YES  |      | NULL    |       |
| AVAILABLE       | tinyint(1)  | YES  |      | NULL    |       |
| PROGRESS        | double      | YES  |      | NULL    |       |
| TABLE_MODE      | varchar(64) | YES  |      | NULL    |       |
+-----------------+-------------+------+------+---------+-------+
8 rows in set (0.01 sec)
```
